--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,44 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="/">First Project</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div> -->
+      </nav><br><br>
+      <%if flash[:notice]%>
+        <div class="alert alert-dismissible alert-info" style="width: 80%;margin-left: 10%;">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%=flash[:notice]%>
+        </div>
+      <%elsif flash[:alert]%>
+        <div class="alert alert-dismissible alert-danger" style="width: 80%;margin-left: 10%;">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%=flash[:alert]%>
+        </div>
+      <%end%>
     <%= yield %>
   </body>
 </html>
