--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,48 +5,59 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
-        <div class="form-group col-md-12">
-          <%= f.label :first_name %><span>*</span>
-          <%= f.text_field :first_name, autofocus: true, class: "form-control"%>
-        </div>
+      <div class="form-group col-md-12">
+        <%= f.label :first_name %><span>*</span>
+        <%= f.text_field :first_name, autofocus: true, class: "form-control"%>
+      </div>
 
-        <div class="form-group col-md-12">
-          <%= f.label :last_name %><span>*</span>
-          <%= f.text_field :last_name, class: "form-control"%>
-        </div>
+      <div class="form-group col-md-12">
+        <%= f.label :last_name %><span>*</span>
+        <%= f.text_field :last_name, class: "form-control"%>
+      </div>
 
-        <div class="form-group col-md-12">
-          <%= f.label :dob %><span>*</span>
-          <%= f.date_field :dob, class: "form-control", max: Date.new(Date.today.year-18, 01, 01)%>
-        </div>
+      <div class="form-group col-md-12">
+        <%= f.label :dob %><span>*</span>
+        <%= f.date_field :dob, class: "form-control", max: Date.new(Date.today.year-18, 01, 01)%>
+      </div>
 
-        <div class="form-group col-md-12">
-          <%= f.label :shipping_address %>
-          <%= f.text_area :shipping_address, class: "form-control", max: Date.new(Date.today.year-18, 01, 01)%>
-        </div>
+      <div class="form-group col-md-12">
+        <%= f.label :shipping_address %>
+        <%= f.text_area :shipping_address, class: "form-control", max: Date.new(Date.today.year-18, 01, 01)%>
+      </div>
 
-        <div class="form-group col-md-12">
-          <%= f.label :billing_address %>
-          <%= f.text_area :billing_address, class: "form-control", max: Date.new(Date.today.year-18, 01, 01)%>
-        </div>
+      <div class="form-group col-md-12">
+        <%= f.label :billing_address %><br>
+        <%= check_box_tag "", '', false, class: 'same_address'%>Same as Shipping address
+        <%= f.text_area :billing_address, class: "form-control", max: Date.new(Date.today.year-18, 01, 01)%>
+      </div>
 
-        <div class="form-group col-md-12">
-          <%= f.label :email %><span>*</span><br />
-          <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
-        </div>
+      <div class="form-group col-md-12">
+        <%= f.label :email %><span>*</span><br />
+        <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+      </div>
 
-        <div class="form-group col-md-12">
-          <%= f.label :password %><span>*</span>
-          <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password", class: "form-control"  %>
-        </div>
+      <div class="form-group col-md-12">
+        <%= f.label :password %><span>*</span>
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control"  %>
+      </div>
 
-        <div class="form-group col-md-12">
-          <%= f.label :password_confirmation %><span>*</span>
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
-        </div>
+      <div class="form-group col-md-12">
+        <%= f.label :password_confirmation %><span>*</span>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+      </div>
+
+      <div class="form-group col-md-6">
+        <%= f.label :role_id, "Role" %>*<br />
+        <%=f.select :role_id,  @roles, {:include_blank => 'Select'}, :class=>"form-control"%>
+      </div>
+
+      <div class="form-group col-md-6">
+        <%= f.label :image, "Profile Image" %>*<br />
+        <%= f.file_field :image %>
+      </div>
       <br>
 
       <div class="form-group col-md-12">
@@ -97,6 +108,9 @@
       "user[email]": {
         required: true,
         email: true
+      },
+      "user[role_id]": {
+        required: true,
       }
     }
   });
@@ -104,4 +118,12 @@
   jQuery.extend(jQuery.validator.messages, {
     equalTo: "Should be same as password!!"
   });
+
+  $(".same_address").change(function() {
+    if($(this).is(":checked")){
+      $("#user_billing_address").val($("#user_shipping_address").val())
+    }else{
+      $("#user_billing_address").val('')
+    }
+  })
 </script>
