--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,19 +4,41 @@
 		<title></title>
 	</head>
 	<body>
-		<!-- <div class="container"> -->
-
+		<div class="container">
+			<h4>Artist List</h4>
 			
-			<div class="jumbotron" style="margin-top: 8%;width: 60%;margin-left: 20%;">
-				<%if user_signed_in?%>
-					<h4>Hii <%= current_user.try(:first_name)%></h4>
-					<h4><%= link_to('Logout', destroy_user_session_path, method: :delete) %> </h4>
-				<%else%>
-					<h3>Welcome</h3>
-					<h4><%= link_to('Login', new_user_session_path) %> if you already have registered or <%= link_to('Sign Up', new_user_registration_path) %> to register</h4>
-					<h4><%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %> or <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></h4>
-				<%end%>
-			</div>
-		<!-- </div> -->
+			<!-- <div class="jumbotron" style="margin-top: 8%;width: 60%;margin-left: 20%;"> -->
+				<%#if user_signed_in?%>
+					<!-- <h4>Hii <%= current_user.try(:first_name)%></h4> -->
+					<!-- <h4><%#= link_to('Logout', destroy_user_session_path, method: :delete) %> </h4> -->
+				<%#else%>
+					<!-- <h3>Welcome</h3> -->
+					<!-- <h4><%#= link_to('Login', new_user_session_path) %> if you already have registered or <%#= link_to('Sign Up', new_user_registration_path) %> to register</h4> -->
+					<!-- <h4><%#= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %> or <%#= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></h4> -->
+				<%#end%>
+			<!-- </div> -->
+			<%if @artist_list.present?%>
+				<table class="table table-bordered table-striped" style="width: 80%">
+					<thead>
+						<th>First Name</th>
+						<th>Role</th>
+					</thead>
+					<tbody>
+						<%@artist_list.each do |curr_obj|%>
+							<tr>
+								<td>
+									<%= link_to "#{curr_obj.first_name} #{curr_obj.last_name}", artist_profile_path(id: curr_obj.id)%>
+								</td>
+								<td>
+									<%= curr_obj.role.try(:name)%>
+								</td>
+							</tr>
+						<%end%>
+					</tbody>
+				</table>
+			<%else%>
+				No Artist Present!!
+			<%end%>
+		</div>
 	</body>
 </html>
