--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= stylesheet_link_tag    'bootstrap.min', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <style type="text/css">
-      label.error {
+      label.error, #error_explanation {
         color: red;
       }
     </style>
@@ -25,9 +25,11 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!-- <div class="collapse navbar-collapse" id="navbarColor01">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav mr-auto"  style="float: left; width: 80%;">
+          </ul>
+          <ul class="navbar-nav mr-auto"  style="float: right; width: 20%;">
+            <!-- <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -35,16 +37,22 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
+            </li> -->
+            <!-- <li class="nav-item"> -->
+                <%if user_signed_in?%>
+                  <%= link_to current_user.try(:first_name), "", class: "nav-link" %>
+                  <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "nav-link" %>
+                <%else%>
+                  <%= link_to 'Login', new_user_session_path, class: "nav-link"%>
+                  <%= link_to 'Sign Up', new_user_registration_path, class: "nav-link"%></h4>
+                <%end%>
+            <!-- </li> -->
           </ul>
-          <form class="form-inline my-2 my-lg-0">
+          <!-- <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search">
             <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div> -->
+          </form> -->
+        </div>
       </nav><br><br>
       <%if flash[:notice]%>
         <div class="alert alert-dismissible alert-info" style="width: 80%;margin-left: 10%;">
